Commit from TeeportHQ

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
   <body>
     <div id="app"></div>
     <script>
+      window.addEventListener('load', function () {
+
       debugger;
       const hamburger = document.querySelector(".hamburger");
       const navMenu = document.querySelector(".nav-menu");
@@ -57,6 +59,8 @@
           hamburger.classList.remove("active");
           navMenu.classList.remove("active");
       }
+
+      })
     </script>
   </body>
 </html>
