--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
       const navMenu = document.querySelector(".nav-menu");
       hamburger.addEventListener("click", mobileMenu);
       function mobileMenu() {
-          hamburger.classList.toggle("active");
-          navMenu.classList.toggle("active");
+          navMenu.style.left = 0;
       }
       const navLink = document.querySelectorAll(".nav-link");
 
@@ -57,7 +56,7 @@
 
       function closeMenu() {
           hamburger.classList.remove("active");
-          navMenu.classList.remove("active");
+          navMenu.style.left = "-100%";
       }
 
       })
