--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
   <body>
     <div id="app"></div>
     <script>
-      window.addEventListener('hashchange', function () {
+      window.addEventListener('popstate', function () {
       const hamburger = document.querySelector(".hamburger");
       const navMenu = document.querySelector(".nav-menu");
       hamburger.addEventListener("click", mobileMenu);
