--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,8 @@
   <body>
     <div id="app"></div>
     <script>
-      if(!!window.performance && window.performance.navigation.type == 2)
-      {
-          window.location.reload();
-      }
-      window.addEventListener('onpageshow', function () {
+
+      window.addEventListener('load', function () {
       const hamburger = document.querySelector(".hamburger");
       const navMenu = document.querySelector(".nav-menu");
       hamburger.addEventListener("click", mobileMenu);
